add button style

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="header">
       <div class="signin">
         <h2>Hot Gadgets</h2>
-        <button class="signinButton">SIGN UP</button>
+        <button class="signinButton btn">SIGN UP</button>
       </div>
       <div class="header_content">
         <h1>Apple Iphone 13 Pro Max</h1>
@@ -52,7 +52,7 @@
               There are many variations of passages of available, but the
               majority have suffered
             </p>
-            <button>SHOW DETAILS</button>
+            <button >SHOW DETAILS</button>
           </div>
         </div>
         <div class="card">
@@ -63,7 +63,7 @@
               There are many variations of passages of available, but the
               majority have suffered
             </p>
-            <button>SHOW DETAILS</button>
+            <button >SHOW DETAILS</button>
           </div>
         </div>
         <div class="card">
@@ -74,7 +74,7 @@
               There are many variations of passages of available, but the
               majority have suffered
             </p>
-            <button>SHOW DETAILS</button>
+            <button >SHOW DETAILS</button>
           </div>
         </div>
         <div class="card">
